Fix collapse on filter

--- a/src/sass/_agenda.scss
+++ b/src/sass/_agenda.scss
@@ -117,6 +117,11 @@
         color: $color-black;
       }
     }
+    @media screen and (max-width: $screen-md-max) {
+      .react-daterange-picker {
+        margin-left: 25px;
+      }
+    }
   }
 }
 
